# ChippyDbg

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: chip8.h  chip8_log.h  chip8_ui.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: chip8.c  chip8_log.c  chip8_ui.cpp  main.c  main.cpp
